--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -4,6 +4,8 @@ VIBBIT_ALLOW_ORIGIN=*
 VIBBIT_REQUEST_TIMEOUT_MS=60000
 VIBBIT_EMPTY_RETRIES=2
 VIBBIT_VALIDATION_RETRIES=2
+# Optional path for persisted admin-configured provider settings.
+VIBBIT_STATE_FILE=.vibbit-backend-state.json
 
 # Auth mode
 # 1) Classroom mode (recommended for schools)
@@ -30,10 +32,10 @@ VIBBIT_OPENAI_ALLOWED_MODELS=
 VIBBIT_GEMINI_ALLOWED_MODELS=
 VIBBIT_OPENROUTER_ALLOWED_MODELS=
 
-# Shared/default key fallback
+# Shared/default key fallback (optional if setting keys via /admin)
 VIBBIT_API_KEY=
 
-# Provider-specific overrides
+# Provider-specific overrides (optional if setting keys via /admin)
 VIBBIT_OPENAI_API_KEY=
 VIBBIT_OPENAI_MODEL=gpt-4o-mini
 
