fix: separate admin auth token from classroom code

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -6,6 +6,9 @@ VIBBIT_EMPTY_RETRIES=2
 VIBBIT_VALIDATION_RETRIES=2
 # Optional path for persisted admin-configured provider settings.
 VIBBIT_STATE_FILE=.vibbit-backend-state.json
+# Optional fixed admin auth token for /admin endpoints.
+# If empty, backend auto-generates and persists one in VIBBIT_STATE_FILE.
+VIBBIT_ADMIN_TOKEN=
 
 # Auth mode
 # 1) Classroom mode (recommended for schools)
