feat: add bookmarklet distribution and backend-hosted installer routes

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -9,6 +9,9 @@ VIBBIT_STATE_FILE=.vibbit-backend-state.json
 # Optional fixed admin auth token for /admin endpoints.
 # If empty, backend auto-generates and persists one in VIBBIT_STATE_FILE.
 VIBBIT_ADMIN_TOKEN=
+# Bookmarklet endpoints
+VIBBIT_BOOKMARKLET_ENABLED=true
+VIBBIT_BOOKMARKLET_ENABLE_BYOK=false
 
 # Auth mode
 # 1) Classroom mode (recommended for schools)
